# Simple-Go

./: .gitignore  Makefile  README.md  cross_file.txt  meson.build  run.sh  simple-go.c  simple-go.h  simple-gtp.c  simple-gtp.h  test.c
include/simple-go/: simple-go.h  simple-gtp-func.h  simple-gtp.h
src/: gtp-start.c  meson.build  simple-go.c  simple-gtp-func.c  simple-gtp.c  test.c
subprojects/: cutils.wrap
